Homepage editing + heroku configuration

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,20 @@
     
     </br>
     </br>
-    <h1>IS 445 Project</h1>
-    <p>Welcome to <%= title %></p>
+    <div class="jumbotron">
+        <h1 class="display-4">Welcome to my IS 445 Project!</h1>
+        <p class="lead">Developed by Omid Shamoil (011934050)</p>
+        <hr class="my-4">
+        <p>Please click on one of the links in the navigation bar to either view the index of contacts, or create a new contact.</p>
+        <hr class="my-4">
+        <p>Languages/Technologies used:</p>
+        <ul style="list-style-type:disc">
+            <li>HTML/Bootsrap: Front-end web development and styling</li>
+            <li>Express: Web application framework</li>
+            <li>MongoDB: Back-end database connection for web application</li>
+            <li>NodeJS: Server-side javascript runtime engine</li>
+            <li>Javascript: Used to build dynamic/interactive web pages</li>
+        </ul>
+    </div>
   </body>
 </html>
