--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item">
-                  <a class="nav-link" href="/users">Contact Index</a>
+                  <a class="btn btn-outline-light mx-2" href="/users">Contact Index</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/users/user">New User</a>
+                  <a class="btn btn-outline-light" href="/users/user">New User</a>
               </li>
           </ul>
       </div>
