--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,10 +16,10 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="users">Contact Index</a>
+                    <a class="btn btn-outline-light mx-2" href="users">Contact Index</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/users/user">New User</a>
+                    <a class="btn btn-outline-light" href="/users/user">New User</a>
                 </li>
             </ul>
         </div>
@@ -31,7 +31,7 @@
         <h1 class="display-4">Welcome to my IS 445 Project!</h1>
         <p class="lead">Developed by Omid Shamoil (011934050)</p>
         <hr class="my-4">
-        <p>Please click on one of the links in the navigation bar to either view the index of contacts, or create a new contact.</p>
+        <p>Please click on one of the buttons in the navigation bar to either view the index of contacts, or create a new contact.</p>
         <hr class="my-4">
         <p>Languages/Technologies used:</p>
         <ul style="list-style-type:disc">
