--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -20,10 +20,10 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item">
-                  <a class="nav-link active" href="/users">Contact Index</a>
+                  <a class="btn btn-outline-light mx-2 active" href="/users">Contact Index</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/users/user">New User</a>
+                  <a class="btn btn-outline-light" href="/users/user">New User</a>
               </li>
           </ul>
       </div>
