Finishing touches (details page + formatting)

--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -56,7 +56,7 @@
                 <%= users[i].phone%>
               </th>
               <td>
-                <a href="/users/user/<%= users[i]._id%>" class="btn btn-outline-primary" role="button" aria-disabled="true">
+                <a href="/users/detail/<%= users[i]._id%>" class="btn btn-outline-primary" role="button" aria-disabled="true">
                   Details</a>
                 <a href="/users/user/<%= users[i]._id%>" class="btn btn-outline-warning" role="button" aria-disabled="true">
                   Edit</a>
