--- a/views/users/detail.ejs
+++ b/views/users/detail.ejs
@@ -11,24 +11,24 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Omid Shamoil</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+  <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Omid Shamoil</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-              <li class="nav-item">
-                  <a class="nav-link" href="/users">Contact Index</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="/users/user">New User</a>
-              </li>
-          </ul>
-      </div>
-    </nav>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+              <a class="btn btn-outline-light mx-2" href="/users">Contact Index</a>
+          </li>
+          <li class="nav-item">
+              <a class="btn btn-outline-light" href="/users/user">New User</a>
+          </li>
+      </ul>
+    </div>
+  </nav>
   </br>
   </br>
   <div class="container">
